--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -10,7 +10,7 @@
   position: relative;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding: 20px;
+  padding: 17px;
   min-height: 266px;
   background-color: #f2f2f2;
 
@@ -46,6 +46,8 @@
   height: 53px;
   background-image: url("../img/cat-slim-mob.svg");
   background-repeat: no-repeat;
+  left: 22px;
+  top: 21px;
 
   @media (min-width: $tablet-width) {
     width: 200px;
@@ -70,12 +72,14 @@
   width: 67px;
   height: 50px;
   background-image: url("../img/cat-mass-mob.svg");
+  background-repeat: no-repeat;
+  left: 13px;
+  top: 24px;
 
   @media (min-width: $tablet-width) {
     width: 268px;
     height: 200px;
     background-image: url("../img/cat-mass-tablet.svg");
-    background-repeat: no-repeat;
     top: 85px;
     right: 22px;
   }
@@ -96,7 +100,8 @@
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
-  margin-left: 49px;
+  margin-left: 11px;
+  padding-top: 13px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -110,13 +115,20 @@
   }
 }
 
+.advantages__title--mass {
+  margin-left: 39px;
+}
+
 .advantages__discription {
   margin: 0;
   font-family: $arial;
   font-size: 14px;
+  line-height: 18px;
   color: #444444;
   margin-top: 29px;
-  margin-bottom: 42px;
+  margin-bottom: 39px;
+  width: 240px;
+  margin-left: 3px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -146,7 +158,7 @@
   width: 240px;
   height: 1px;
   background-color: #d9d9d9;
-  bottom: 77px;
+  bottom: 58px;
   left: 22px;
 
   @media (min-width: $tablet-width) {
@@ -160,6 +172,7 @@
   text-decoration: none;
   text-transform: uppercase;
   color: #000000;
+  margin-left: 3px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -169,18 +182,27 @@
   }
 }
 
+.advantages__button:active {
+  opacity: 30%;
+}
+
 .advantages__button::after {
+  background-position: right;
   content: "";
   position: absolute;
-  width: 50px;
-  height: 53px;
+  width: 24px;
+  height: 12px;
   background-image: url("../img/arrow-btn.svg");
   background-repeat: no-repeat;
-  left: 95px;
-  top: 6px;
+  left: 100px;
+  top: 5px;
 
   @media (min-width: $tablet-width) {
     left: 128px;
     top: 18px;
   }
+}
+
+.advantages__button:hover::after {
+  width: 32px;
 }
