--- a/source/sass/blocks/progress.scss
+++ b/source/sass/blocks/progress.scss
@@ -54,6 +54,8 @@
 .progress__discription {
   margin: 0;
   width: 199px;
+  font-size: 14px;
+  line-height: 18px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -104,7 +106,7 @@
   background-position: 50%;
   background-repeat: no-repeat;
   left: 0;
-  top: 0;
+  top: -2px;
 
   @media (min-width: $tablet-width) {
     width: 80px;
