--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -27,7 +27,7 @@
   clip: rect(0, 0, 0, 0);
   padding: 0;
   border: 0;
-  margin: -1;
+  margin: -1px;
   height: 1px;
   width: 1px;
   overflow: hidden;
