--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,3 +14,12 @@
   text-transform: uppercase;
   border-style: none;
 }
+
+.button:hover {
+  background-color: #5eaa2f;
+}
+
+.button:active {
+  background-color: #5eaa2f;
+  color: rgba(255, 255, 255, 0.3);
+}
