--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -29,7 +29,7 @@
     background-position: top left;
     right: 0;
     left: calc((100% - 1220px) / 2 + 598px);
-    top: -143px;
+    top: -164px;
 
     @media (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-backgrond-cat/cat-background-desktop@2x.jpg");
@@ -54,7 +54,7 @@
 
 .cover__title {
   margin: 0;
-  padding-top: 27px;
+  padding-top: 26px;
   padding-bottom: 25px;
   font-weight: 400;
   line-height: 36px;
@@ -104,8 +104,10 @@
 }
 
 .cover__button {
+  font-size: 14px;
   width: 280px;
   height: 40px;
+  margin-top: -2px;
 
   @media (min-width: $tablet-width) {
     width: 244px;
