--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,8 +1,15 @@
+.form {
+  font-family: $oswald;
+}
+
 .form__title {
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
+  margin-top: 0;
+  padding-top: 27px;
   margin-bottom: 37px;
+  border-top: 1px solid #d9d9d9;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
@@ -19,6 +26,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
+  text-transform: uppercase;
   margin-bottom: 39px;
   width: 226px;
 
@@ -59,7 +67,7 @@
 }
 
 .form__item:last-child {
-  margin-bottom: 52px;
+  margin-bottom: 22px;
 
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
@@ -80,10 +88,11 @@
 }
 
 .form__list-input {
+  font-family: $oswald;
   display: flex;
   width: 100%;
   min-height: 45px;
-  line-height: 18px;
+  font-size: 16px;
   text-transform: uppercase;
   color: #444444;
   border: 1px solid #e7e7e7e7;
@@ -98,11 +107,26 @@
   }
 }
 
+.form__contact-input:hover,
+.form__list-input:hover {
+  border: 1px solid #cdcdcd;
+}
+
+.form__contact-input:focus,
+.form__list-input:focus {
+  border: 1px solid #444444;
+}
+
+.form__contact-input--error,
+.form__list-input--error {
+  border: 2px solid #ff8282;
+}
+
 // радиокнопки
 .form__radio {
-  padding: 25px 0;
+  padding: 25px 0 22px 0;
   margin: 0;
-  margin-bottom: 26px;
+  margin-bottom: 25px;
   border-top: 1px solid #e7e7e7;
   border-bottom: 1px solid #e7e7e7;
   position: relative;
@@ -122,7 +146,7 @@
 }
 
 .form__radio-item {
-  margin-bottom: 25px;
+  margin-bottom: 19px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 23px;
@@ -140,19 +164,26 @@
 .form__radio-label::before {
   position: absolute;
   top: 6px;
-  left: -50px;
+  left: -36px;
   width: 13px;
   height: 13px;
-  background-color: #68b738;
   border-radius: 50%;
   content: "";
+}
+
+.control-input:checked+label::before {
+  background-color: #68b738;
+}
+
+.control-input:checked+label:disabled::before {
+  opacity: 0.3;
 }
 
 .form__radio-label {
   position: relative;
   text-transform: uppercase;
   color: #222222;
-  margin-left: 56px;
+  margin-left: 45px;
 }
 
 .form__control-mark {
@@ -162,8 +193,16 @@
   height: 30px;
   border: 1px solid #cdcdcd;
   border-radius: 50%;
-  left: -59px;
-  top: -2px;
+  left: -45px;
+  top: -3px;
+}
+
+.form__control-mark:hover {
+  border: 1px solid #bababa;
+}
+
+.form__control-mark:disabled {
+  opacity: 0.3;
 }
 
 // контактные данные
@@ -182,7 +221,7 @@
   background-color: #68b738;
   width: 100%;
   height: 2px;
-  top: 15px;
+  top: 16px;
   z-index: 0;
 
   @media (min-width: $tablet-width) {
@@ -260,6 +299,7 @@
 }
 
 .form__contact-input {
+  position: relative;
   flex-grow: 1;
   min-height: 45px;
   font-family: $oswald;
@@ -267,7 +307,7 @@
   text-transform: uppercase;
   color: #444444;
   padding-left: 14px;
-  border: 1px solid #cdcdcd;
+  border: 1px solid #e7e7e7;
   font-size: 16px;
 
   @media (min-width: $tablet-width) {
@@ -278,24 +318,33 @@
   }
 }
 
-.form__contact-mail {
+.form__mail-svg {
+  stroke: #222222;
   position: absolute;
   width: 19px;
   height: 15px;
-  background-image: url("../img/mail-icon.svg");
   background-repeat: no-repeat;
-  right: 17px;
-  top: 16px;
+  right: 15px;
+  top: 15px;
 }
 
-.form__contact-tel {
+.form__phone-svg:focus,
+.form__mail-svg:focus {
+  stroke: #68b738;
+}
+
+.form__phone-svg:invalid,
+.form__mail-svg:invalid {
+  stroke: #ff8282;
+}
+
+.form__phone-svg {
   position: absolute;
   width: 20px;
   height: 20px;
-  background-image: url("../img/tel-icon.svg");
   background-repeat: no-repeat;
-  right: 16px;
-  top: 12px;
+  right: 13px;
+  top: 13px;
 }
 
 .form__personality,
@@ -310,10 +359,10 @@
 .form__discription-head {
   font-size: 24px;
   line-height: 26px;
-  margin-bottom: 47px;
+  margin-bottom: 38px;
   background-color: #ffffff;
   width: fit-content;
-  padding: 0 22px;
+  padding: 1px 22px 0 22px;
   margin-left: -22px;
 
   @media (min-width: $tablet-width) {
@@ -325,14 +374,15 @@
 
 .form__discription-text {
   width: 100%;
-  padding: 10px 13px;
+  height: 150px;
+  padding: 9px 14px;
   border: 1px solid #e7e7e7;
   font-family: $oswald;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
   color: #444444;
-  margin-bottom: 22px;
+  margin-bottom: 18px;
 
   @media (min-width: $tablet-width) {
     padding: 10px 19px;
@@ -347,7 +397,7 @@
 .form__additional-head {
   font-size: 24px;
   line-height: 26px;
-  margin-bottom: 39px;
+  margin-bottom: 37px;
   background-color: #ffffff;
   width: fit-content;
   padding: 0 22px;
@@ -383,16 +433,41 @@
 }
 
 .form__additional-label {
+  position: relative;
   text-transform: uppercase;
-  margin-left: 66px;
+  margin-left: 46px;
 
   @media (min-width: $tablet-width) {
     margin-left: 40px;
   }
 }
 
+.form__additional-input:checked + label .form__additional-mark::before {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 30px;
+  height: 30px;
+  content: "";
+  background-image: url("../img/tick.svg");
+}
+
+// .form__additional-input:focus + label .form__additional-mark {
+//   background-color: #ff8282;
+// }
+
+.form__additional-mark {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #cdcdcd;
+  left: -46px;
+  top: -2px;
+}
+
 .form__additional-item {
-  margin-bottom: 25px;
+  margin-bottom: 18px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 42px;
@@ -402,7 +477,7 @@
 }
 
 .form__additional-item:last-child {
-  margin-bottom: 41px;
+  margin-bottom: 38px;
 }
 
 .form__button {
