--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,6 +1,6 @@
 .product {
   position: relative;
-  min-height: 185px;
+  min-height: 165px;
   display: grid;
   grid-template-columns: 140px auto;
   grid-template-rows: auto auto;
@@ -112,6 +112,7 @@
   grid-column: 1/-1;
   width: 100%;
   height: 40px;
+  margin-top: 8px;
 }
 
 .product::after {
@@ -121,7 +122,7 @@
   height: 1px;
   background-color: #ebebeb;
   left: 0;
-  bottom: -20px;
+  bottom: -25px;
 
   @media (min-width: $tablet-width) {
     display: none;
