--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -1,12 +1,12 @@
 .result {
   background-color: #eaeaea;
   padding-top: 25px;
-  padding-bottom: 45px;
+  padding-bottom: 35px;
   width: 100%;
 
   @media (min-width: $tablet-width) {
     background-color: initial;
-    background-image: linear-gradient(360deg, #eaeaea 40%, transparent 0%);
+    background-image: linear-gradient(360deg, #eaeaea 44%, transparent 0%);
     min-height: 1080px;
     padding-bottom: 0;
   }
@@ -92,7 +92,7 @@
   margin: 0;
   border: 1px solid #cdcdcd;
   border-radius: 3px;
-  padding: 14px 42px 17px 42px;
+  padding: 13px 42px 17px 42px;
 
   @media (min-width: $tablet-width) {
     width: 162px;
@@ -102,7 +102,7 @@
 }
 
 .result__data--days {
-  padding: 15px 21px 16px 20px;
+  padding: 14px 21px 16px 20px;
 }
 
 .result__indicators {
@@ -115,7 +115,7 @@
   padding-right: 15px;
   padding-left: 15px;
   margin: 0 auto 0;
-  margin-top: -7px;
+  margin-top: -10px;
   width: fit-content;
 
   @media (min-width: $tablet-width) {
@@ -163,9 +163,8 @@
 }
 
 // Слайдер кот
-
 .comparison {
-  --comparison: 50%;
+  --comparison: 49.3%;
   max-width: 280px;
   width: 280px;
   position: relative;
@@ -174,6 +173,7 @@
   @media (min-width: $tablet-width) {
     width: 560px;
     height: 512px;
+    max-width: 560px;
   }
 }
 
@@ -196,42 +196,66 @@
   background-color: #eaeaea;
 
   @media (min-width: $tablet-width) {
-    // background-color: transparent;
-    // как тут задать фон???
+    background-image: linear-gradient(180deg, #ffffff 28.6%, transparent 0%);
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: #f2f2f2;
+    background-image: linear-gradient(180deg, #ffffff 24.8%, transparent 0%);
   }
 }
 
 .comparison__fat {
   width: 280px;
   min-width: 280px;
+  height: 256px;
+
+  @media (min-width: $tablet-width) {
+    width: 560px;
+    height: 507px;
+  }
+}
+
+.comparison__skinny {
+  @media (min-width: $tablet-width) {
+    width: 560px;
+    height: auto;
+  }
 }
 
 .comparison__slider {
+  color: #666666;
   position: absolute;
   width: 4px;
   height: 256px;
   background-color: #666666;
   border-radius: 2px;
   z-index: 1;
-  top: -3px;
-  left: 50%;
+  top: 0;
+  left: var(--comparison, 50%);
 
   @media (min-width: $tablet-width) {
     height: 512px;
-    top: 30px;
+    top: 0;
   }
 }
 
-.comparison__slider::before {
+.comparison__slider:hover {
+  background-color: #68b738;
+  color: #68b738;
+}
+
+.comparison__slider:active {
+  background-color: #5eaa2f;
+  opacity: 0.6;
+}
+
+.comparison__svg {
   position: absolute;
-  content: "";
-  background-image: url("../img/rows-range.svg");
-  width: 40px;
-  height: 40px;
-  top: 111px;
+  top: 108px;
   left: -18px;
 
   @media (min-width: $tablet-width) {
-    top: 221px;
+    top: 217px;
   }
 }
