--- a/source/sass/blocks/sponsor.scss
+++ b/source/sass/blocks/sponsor.scss
@@ -1,28 +1,34 @@
 .sponsor {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sponsor__text {
+  padding-top: 7px;
   display: block;
-  position: relative;
   font-family: $arial;
   text-decoration: none;
   color: #444444;
 
+
   @media (min-width: $tablet-width) {
     margin: 0;
-    padding-right: 49px;
+    margin-right: 22px;
   }
 }
 
-.sponsor::after {
-  position: absolute;
-  content: "";
-  background-image: url("../img/icon-html-academy.svg");
-  background-repeat: no-repeat;
-  width: 27px;
-  height: 34px;
-  top: -6px;
-  right: 0;
+.sponsor__text:active {
+  color: rgba(68, 68, 68, 0.3);
+}
 
-  @media (min-width: $tablet-width) {
-    top: -6px;
-    right: 0;
-  }
+.sponsor__svg {
+  fill: #666666;
+}
+
+.sponsor__svg:hover {
+  fill: #68b738;
+}
+
+.sponsor__svg:active {
+  fill: rgba(104, 183, 56, 0.3);
 }
