--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -8,12 +8,12 @@
   @media (min-width: $tablet-width) {
     padding-left: 36px;
     padding-right: 36px;
-    margin-bottom: 40px;
+    margin-bottom: 41px;
   }
 
   @media (min-width: $desktop-width) {
     padding-left: 0;
-    width: 75%;
+    width: 76.5%;
     padding-top: 15px;
     margin-bottom: 70px;
   }
@@ -33,15 +33,16 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    margin-top: 36px;
-    margin-bottom: 25px;
+    margin-top: 38px;
+    margin-bottom: 24px;
     padding: 0 36px 80px 36px;
     margin-left: 0;
   }
 
   @media (min-width: $desktop-width) {
-    margin-top: 40px;
-    margin-bottom: 75px;
+    margin-top: 45px;
+    margin-left: -36px;
+    margin-bottom: 79px;
     border: none;
     padding: 0 36px;
   }
@@ -78,9 +79,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    left: 0;
-    bottom: -76px;
-    width: 876px;
+    left: 38px;
+    bottom: -80px;
+    width: 893px;
   }
 }
 
@@ -147,7 +148,11 @@
 
 .additional__td-center {
   @media (min-width: $tablet-width) {
-    margin-right: 55px;
+    margin-right: 49px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 195px;
   }
 }
 
@@ -156,6 +161,8 @@
 
   @media (min-width: $desktop-width) {
     margin-right: 38px;
+    min-width: 43px;
+    text-align: left;
   }
 }
 
@@ -247,7 +254,7 @@
     height: 288px;
     background-image: url("../img/icon-gift.svg"), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promo-cat-catalog/promo-cat-desktop.jpg");
     background-repeat: no-repeat;
-    background-position: top 65px center, top center, top center;
+    background-position: top 55px center, top center, top center;
     margin-bottom: 0;
 
     @media (min-resolution: 2dppx) {
@@ -281,7 +288,7 @@
     height: 290px;
     padding-right: 0;
     text-align: center;
-    padding-top: 166px;
+    padding-top: 141px;
     display: flex;
     justify-content: center;
   }
