--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,9 +10,9 @@
   }
 }
 
-// .main-nav--open {
-//   display: block;
-// }
+.main-nav--open {
+  display: block;
+}
 
 .main-nav__list {
   text-align: center;
@@ -56,7 +56,8 @@
 
   @media (min-width: $tablet-width) {
     margin-bottom: 0;
-    margin-right: 34px;
+    margin-right: 37px;
+    margin-top: 17px;
   }
 
   @media (min-width: $desktop-width) {
@@ -111,7 +112,7 @@
 .main-nav__list-item--active {
   @media (min-width: $tablet-width) {
     border-bottom: 2px solid #68b738;
-    padding-bottom: 6px;
+    padding-bottom: 4px;
   }
 }
 
