--- a/source/sass/blocks/progress.scss
+++ b/source/sass/blocks/progress.scss
@@ -8,6 +8,12 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
+    margin-top: 45px;
+    margin-bottom: 72px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 2px;
   }
 }
 
@@ -24,30 +30,16 @@
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 280px 280px;
-    column-gap: 55px;
+    grid-template-rows: 318px 280px;
+    column-gap: 60px;
+    margin-bottom: 23px;
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
     margin-bottom: 60px;
-  }
-}
-
-.progress__list::after {
-  @media (min-width: $tablet-width) {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: #e6e6e6;
-    left: 0;
-    bottom: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    display: none;
+    column-gap: 65px;
   }
 }
 
@@ -64,6 +56,14 @@
   }
 }
 
+.br-tablet {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
+}
+
 .progress__item {
   position: relative;
   margin-bottom: 26px;
@@ -75,7 +75,7 @@
     grid-template-columns: auto;
     grid-template-rows: auto;
     padding-left: 0;
-    padding-top: 108px;
+    padding-top: 110px;
   }
 }
 
