--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -2,3 +2,5 @@ $oswald: "oswald", "Tahoma", sans-serif;
 $arial: "Arial", "Verdana", sans-serif;
 $tablet-width: 768px;
 $desktop-width: 1280px;
+
+$desktop-width-max: 1279px;
