--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -20,7 +20,7 @@
     min-width: 708px;
     min-height: 372px;
     padding: 0;
-    padding-top: 77px;
+    padding-top: 75px;
     padding-left: 53px;
     margin-bottom: 30px;
   }
@@ -53,16 +53,16 @@
     width: 200px;
     height: 211px;
     background-image: url("../img/cat-slim-tablet.svg");
-    top: 85px;
-    right: 67px;
+    top: 79px;
+    left: 446px;
   }
 
   @media (min-width: $desktop-width) {
     width: 100px;
     height: 106px;
     background-image: url("../img/cat-slim-desktop.svg");
-    top: 40px;
-    left: 57px;
+    top: 41px;
+    left: 52px;
   }
 }
 
@@ -80,8 +80,8 @@
     width: 268px;
     height: 200px;
     background-image: url("../img/cat-mass-tablet.svg");
-    top: 85px;
-    right: 22px;
+    top: 89px;
+    left: 412px;
   }
 
   @media (min-width: $desktop-width) {
@@ -89,7 +89,7 @@
     height: 100px;
     background-image: url("../img/cat-mass-desktop.svg");
     top: 47px;
-    left: 39px;
+    left: 33px;
   }
 }
 
@@ -108,15 +108,19 @@
     line-height: 36px;
     text-align: left;
     margin-left: 0;
+    padding-top: 0;
   }
 
   @media (min-width: $desktop-width) {
     text-align: center;
+    margin-left: 22px;
   }
 }
 
 .advantages__title--mass {
-  margin-left: 39px;
+  @media (min-width: $desktop-width) {
+    margin-left: 62px;
+  }
 }
 
 .advantages__discription {
@@ -134,11 +138,14 @@
     font-size: 16px;
     line-height: 24px;
     width: 51%;
-    padding-top: 24px;
+    margin-left: 0;
+    margin-top: 26px;
   }
 
   @media (min-width: $desktop-width) {
     width: 100%;
+    margin-top: 74px;
+    margin-bottom: 16px;
   }
 }
 
@@ -149,6 +156,8 @@
 
   @media (min-width: $desktop-width) {
     width: 450px;
+    margin-top: 74px;
+    margin-bottom: 16px;
   }
 }
 
@@ -178,7 +187,8 @@
     font-size: 20px;
     line-height: 30px;
     padding: 10px 45px 10px 0;
-    margin-bottom: 55px;
+    margin-bottom: 49px;
+    margin-left: 0;
   }
 }
 
@@ -199,7 +209,12 @@
 
   @media (min-width: $tablet-width) {
     left: 128px;
-    top: 18px;
+    top: 20px;
+  }
+
+  @media (min-width: $tablet-width) {
+    left: 132px;
+    top: 19px;
   }
 }
 
