--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -14,7 +14,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 82px;
+    margin-bottom: 35px;
   }
 }
 
@@ -28,8 +28,8 @@
     background-size: auto 694px;
     background-position: top left;
     right: 0;
-    left: calc((100% - 1220px) / 2 + 598px);
-    top: -164px;
+    left: calc((100% - 1220px) / 2 + 610px);
+    top: -189px;
 
     @media (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-backgrond-cat/cat-background-desktop@2x.jpg");
@@ -67,12 +67,13 @@
     padding-top: 0;
     text-align: left;
     padding-bottom: 0;
-    margin-bottom: 41px;
-    padding-left: 80px;
+    margin-bottom: 39px;
+    padding-left: 86px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 110px;
+    padding-top: 37px;
+    padding-left: 79px;
   }
 }
 
@@ -88,10 +89,10 @@
     line-height: 20px;
     color: #000000;
     margin: 0;
-    margin-bottom: 49px;
+    margin-bottom: 51px;
     padding-bottom: 0;
     text-align-last: left;
-    padding-left: 80px;
+    padding-left: 89px;
     width: 500px;
   }
 
@@ -100,6 +101,7 @@
     line-height: 20px;
     color: #000000;
     margin-bottom: 52px;
+    padding-left: 80px;
   }
 }
 
@@ -116,6 +118,10 @@
     line-height: none;
     z-index: 1;
     position: relative;
+    margin-left: 90px;
+  }
+
+  @media (min-width: $desktop-width) {
     margin-left: 80px;
   }
 }
@@ -123,14 +129,16 @@
 .cover__img {
   @media (min-width: $tablet-width) {
     position: absolute;
-    top: 204px;
-    left: 70px;
+    top: 199px;
+    left: 29px;
     height: 609px;
     width: fit-content;
   }
 
   @media (min-width: $desktop-width) {
-    top: 0;
-    left: 432px;
+    top: -48px;
+    left: 479px;
+    width: 552px;
+    height: 499px;
   }
 }
