--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,57 @@
 .form {
+  position: relative;
   font-family: $oswald;
+}
+
+.form::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+  top: -1px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
+.form::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+  top: 361px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
+.main-form::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+  top: 584px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
 
 .form__title {
@@ -9,12 +61,12 @@
   margin-top: 0;
   padding-top: 27px;
   margin-bottom: 37px;
-  border-top: 1px solid #d9d9d9;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 54px;
+    margin-top: -27px;
   }
 
   @media (min-width: $desktop-width) {
@@ -67,7 +119,11 @@
 }
 
 .form__item:last-child {
-  margin-bottom: 22px;
+  margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 73px;
+  }
 
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
@@ -127,15 +183,15 @@
   padding: 25px 0 22px 0;
   margin: 0;
   margin-bottom: 25px;
-  border-top: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
+  // border-top: 1px solid #e7e7e7;
+  // border-bottom: 1px solid #e7e7e7;
   position: relative;
   list-style: none;
 
   @media (min-width: $tablet-width) {
-    padding: 25px 28px;
+    padding: 27px 28px;
     border: 1px solid #e7e7e7;
-    margin-bottom: 75px;
+    margin-bottom: 79px;
   }
 
   @media (min-width: $desktop-width) {
@@ -153,7 +209,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 36px;
+    margin-bottom: 23px;
   }
 }
 
@@ -163,12 +219,19 @@
 
 .form__radio-label::before {
   position: absolute;
-  top: 6px;
-  left: -36px;
+  top: 5px;
+  left: -36.6px;
   width: 13px;
   height: 13px;
   border-radius: 50%;
   content: "";
+
+  @media (min-width: $tablet-width) {
+    top: 7px;
+    left: -48.6px;
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .control-input:checked+label::before {
@@ -184,6 +247,12 @@
   text-transform: uppercase;
   color: #222222;
   margin-left: 45px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    margin-left: 60px;
+  }
 }
 
 .form__control-mark {
@@ -195,6 +264,12 @@
   border-radius: 50%;
   left: -45px;
   top: -3px;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+    left: -60px;
+  }
 }
 
 .form__control-mark:hover {
@@ -225,7 +300,7 @@
   z-index: 0;
 
   @media (min-width: $tablet-width) {
-    top: 20px;
+    top: 21px;
   }
 }
 
@@ -242,6 +317,9 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+    padding-right: 43px;
+    padding-left: 21px;
+    margin-left: -24px;
   }
 }
 
@@ -272,7 +350,7 @@
 
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
-    min-width: 557px;
+    min-width: 575px;
   }
 }
 
@@ -295,6 +373,7 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    margin-right: 18px;
   }
 }
 
@@ -316,6 +395,10 @@
     min-height: 52px;
     padding-left: 21px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 20px;
+  }
 }
 
 .form__mail-svg {
@@ -333,8 +416,8 @@
   stroke: #68b738;
 }
 
-.form__phone-svg:invalid,
-.form__mail-svg:invalid {
+.form__phone-svg--invalid,
+.form__mail-svg--invalid {
   stroke: #ff8282;
 }
 
@@ -385,11 +468,11 @@
   margin-bottom: 18px;
 
   @media (min-width: $tablet-width) {
-    padding: 10px 19px;
+    padding: 7px 19px;
     font-size: 20px;
     line-height: 30px;
     height: 174px;
-    margin-bottom: 65px;
+    margin-bottom: 59px;
   }
 }
 
@@ -420,11 +503,13 @@
     display: grid;
     grid-template-columns: auto auto;
     margin-bottom: 17px;
+    column-gap: 23px;
   }
 
   @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 25px;
   }
 }
 
@@ -438,18 +523,22 @@
   margin-left: 46px;
 
   @media (min-width: $tablet-width) {
-    margin-left: 40px;
+    margin-left: 61px;
   }
 }
 
-.form__additional-input:checked + label .form__additional-mark::before {
+.form__additional-input:checked+label .form__additional-mark::before {
   position: absolute;
-  top: 1px;
   left: 1px;
   width: 30px;
   height: 30px;
   content: "";
   background-image: url("../img/tick.svg");
+
+  @media (min-width: $tablet-width) {
+    left: 4px;
+    top: 6px;
+  }
 }
 
 // .form__additional-input:focus + label .form__additional-mark {
@@ -464,6 +553,13 @@
   border: 1px solid #cdcdcd;
   left: -46px;
   top: -2px;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+    left: -60px;
+    top: -5px;
+  }
 }
 
 .form__additional-item {
@@ -495,7 +591,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 55%;
+    width: 47%;
     margin-right: 81px;
     margin-bottom: 82px;
   }
