--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,6 +7,10 @@
   min-width: 320px;
 
   @media (min-width: $tablet-width) {
-    padding: 26px 0 0 0;
+    padding: 19px 0 0 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 14px 0 0 0;
   }
 }
