--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -13,13 +13,13 @@
     margin-bottom: 30px;
     padding-left: 35px;
     padding-right: 35px;
-    padding-bottom: 32px;
-    background-image: linear-gradient(360deg, #f2f2f2 82%, transparent 38%);
+    padding-bottom: 39px;
+    background-image: linear-gradient(360deg, #f2f2f2 84%, transparent 38%);
   }
 
   @media (min-width: $desktop-width) {
     width: 245px;
-    // height: 431px;
+    padding-bottom: 40px;
   }
 }
 
@@ -29,6 +29,11 @@
   @media (min-width: $tablet-width) {
     display: block;
     text-align: center;
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 41px;
   }
 }
 
@@ -36,11 +41,13 @@
   @media (min-width: $tablet-width) {
     width: fit-content;
     height: 200px;
+    margin-top: 12px;
+  }
 
-    @media (min-width: $desktop-width) {
-      width: 172px;
-      height: auto;
-    }
+  @media (min-width: $desktop-width) {
+    width: 172px;
+    height: auto;
+    margin-top: 4px;
   }
 }
 
@@ -50,7 +57,7 @@
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
-    margin-bottom: 33px;
+    margin-bottom: 34px;
   }
 }
 
@@ -71,7 +78,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    line-height: 21px;
+    line-height: 19px;
+    margin-bottom: 27px;
   }
 }
 
@@ -84,7 +92,8 @@
   color: #444444;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 7px;
+    font-size: 16px;
+    margin-bottom: 10px;
     padding-bottom: 5px;
     border-bottom: 1px solid #cdcdcd;
   }
@@ -113,6 +122,11 @@
   width: 100%;
   height: 40px;
   margin-top: 8px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
+    width: 98%;
+  }
 }
 
 .product::after {
