--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -1,4 +1,5 @@
 .result {
+  position: relative;
   background-color: #eaeaea;
   padding-top: 25px;
   padding-bottom: 35px;
@@ -6,14 +7,33 @@
 
   @media (min-width: $tablet-width) {
     background-color: initial;
-    background-image: linear-gradient(360deg, #eaeaea 44%, transparent 0%);
-    min-height: 1080px;
+    background-image: linear-gradient(360deg, #eaeaea 43.5%, transparent 0%);
+    min-height: 1062px;
     padding-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
-    background-image: linear-gradient(360deg, #f2f2f2 77%, transparent 23%);
+    background-image: linear-gradient(360deg, #f2f2f2 73.5%, transparent 23%);
     min-height: 600px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 40px;
+  }
+}
+
+.result::after {
+  @media (min-width: $tablet-width) {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #e6e6e6;
+    top: -20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
@@ -68,11 +88,12 @@
   align-items: inherit;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 91px;
+    margin-bottom: 94px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 430px;
+    width: 409px;
+    margin-bottom: 72px;
   }
 }
 
@@ -122,10 +143,20 @@
     background-color: #ffffff;
     font-size: 14px;
     line-height: 14px;
+    padding-right: 8px;
+    padding-left: 8px;
   }
 
   @media (min-width: $desktop-width) {
     background-color: #f2f2f2;
+  }
+}
+
+.br-mob {
+  display: block;
+
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
 
@@ -137,13 +168,15 @@
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    margin-right: 0;
+    margin-right: 2px;
+    margin-top: 6px;
     font-size: 20px;
+    line-height: 29px;
   }
 
   @media (min-width: $desktop-width) {
     margin: 0;
-    margin-top: 60px;
+    margin-top: 51px;
   }
 }
 
@@ -158,104 +191,6 @@
 
   @media (min-width: $desktop-width) {
     display: inline-block;
-    margin-left: 92px;
-  }
-}
-
-// Слайдер кот
-.comparison {
-  --comparison: 49.3%;
-  max-width: 280px;
-  width: 280px;
-  position: relative;
-  margin: 0 auto;
-
-  @media (min-width: $tablet-width) {
-    width: 560px;
-    height: 512px;
-    max-width: 560px;
-  }
-}
-
-.comparison__wrapper {
-  @media (min-width: $tablet-width) {
-    max-width: 560px;
-    width: 560px;
-    height: 512px;
-    margin: 0 auto;
-  }
-}
-
-.comparison__top {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: var(--comparison, 50%);
-  overflow-x: hidden;
-  background-color: #eaeaea;
-
-  @media (min-width: $tablet-width) {
-    background-image: linear-gradient(180deg, #ffffff 28.6%, transparent 0%);
-  }
-
-  @media (min-width: $desktop-width) {
-    background-color: #f2f2f2;
-    background-image: linear-gradient(180deg, #ffffff 24.8%, transparent 0%);
-  }
-}
-
-.comparison__fat {
-  width: 280px;
-  min-width: 280px;
-  height: 256px;
-
-  @media (min-width: $tablet-width) {
-    width: 560px;
-    height: 507px;
-  }
-}
-
-.comparison__skinny {
-  @media (min-width: $tablet-width) {
-    width: 560px;
-    height: auto;
-  }
-}
-
-.comparison__slider {
-  color: #666666;
-  position: absolute;
-  width: 4px;
-  height: 256px;
-  background-color: #666666;
-  border-radius: 2px;
-  z-index: 1;
-  top: 0;
-  left: var(--comparison, 50%);
-
-  @media (min-width: $tablet-width) {
-    height: 512px;
-    top: 0;
-  }
-}
-
-.comparison__slider:hover {
-  background-color: #68b738;
-  color: #68b738;
-}
-
-.comparison__slider:active {
-  background-color: #5eaa2f;
-  opacity: 0.6;
-}
-
-.comparison__svg {
-  position: absolute;
-  top: 108px;
-  left: -18px;
-
-  @media (min-width: $tablet-width) {
-    top: 217px;
+    margin-left: 65px;
   }
 }
