--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "./blocks/catalog.scss";
 @import "./blocks/progress.scss";
 @import "./blocks/result.scss";
+@import "./blocks/comparison.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/sponsor.scss";
